--- a/aaa.ipynb
+++ b/aaa.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Child 1', 'Child 2', 'Child 3']\n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "\n",
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +51,10 @@
     "import time\n",
     "import logging\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -66,12 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
     "# 面積を抽出する関数\n",
     "def extract_area(text):\n",
     "    match = re.search(r'(\\d+(\\.\\d+)?)m2', text)\n",
@@ -95,6 +104,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 7)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_age(built_date):\n",
+    "    # 現在の年と月を取得\n",
+    "    current_date = datetime.now()\n",
+    "    current_year = current_date.year\n",
+    "    current_month = current_date.month\n",
+    "\n",
+    "    # built_dateを年と月に分割\n",
+    "    match = re.search(r'(\\d+)年(\\d+)月', built_date)\n",
+    "    if match:\n",
+    "        built_year = int(match.group(1))\n",
+    "        built_month = int(match.group(2))\n",
+    "    else:\n",
+    "        return None\n",
+    "    \n",
+    "    # 築年数を計算\n",
+    "    age_years = current_year - built_year\n",
+    "    age_months = current_month - built_month\n",
+    "\n",
+    "    # 月の差がマイナスの場合、年から1を引き、月に12を足す\n",
+    "    if age_months < 0:\n",
+    "        age_years -= 1\n",
+    "        age_months += 12\n",
+    "\n",
+    "    return age_years,age_months\n",
+    "\n",
+    "calculate_age(\"2021年5月\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [],
@@ -108,11 +162,315 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': ['ロクタス', 'コーポ東山', '洗足シュロス', 'グリーンプラザ綾瀬II', '豊栄アルベルゴ上野', 'パークハイツ', '池袋シティハウス', '鷺宮プリンスマンション', '新菊川ビル', '久我山ロータリーマンション', 'イトーピア豊玉マンション', 'ハイネス阿佐谷', 'ダイヤモンドスクエア駒形', 'セザール第二竹ノ塚', 'セザール第二竹ノ塚', 'ワコー徳丸マンション', '給田西住宅', 'グリーンパーク花畑Iパサージュ', 'アイディ上野Ⅲ', 'ビレッタ池之端', 'ライオンズマンション青戸', 'スカイタウン中野', 'シャンボール上北沢', '力建杉並ハイム', 'カーサ常盤台', 'ボナハイツ中川C棟', 'グリーンコーポお花茶屋', 'ワコーレ赤塚公園', '久我山ロータリーマンション119号室', 'ダイアパレス三ノ輪'], 'price': ['1億4700万円', '1100万円', '1400万円', '1400万円', '1480万円', '1480万円', '1490万円', '1500万円', '1540万円', '1580万円', '1580万円', '1590万円', '1650万円', '1690万円', '1690万円', '1880万円', '1890万円', '1980万円', '1980万円', '1980万円', '1980万円', '1980万円', '1990万円', '1990万円', '2080万円', '2090万円', '2090万円', '2150万円', '2180万円', '2190万円'], 'address': '東京都荒川区荒川１-４６－７', 'area': '41', 'age': '1979年9月'}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>price</th>\n",
+       "      <th>address</th>\n",
+       "      <th>area</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ロクタス</td>\n",
+       "      <td>1億4700万円</td>\n",
+       "      <td>東京都目黒区駒場１</td>\n",
+       "      <td>92.36</td>\n",
+       "      <td>2009年12月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>コーポ東山</td>\n",
+       "      <td>1100万円</td>\n",
+       "      <td>東京都板橋区東山町</td>\n",
+       "      <td>32.93</td>\n",
+       "      <td>1975年4月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>洗足シュロス</td>\n",
+       "      <td>1400万円</td>\n",
+       "      <td>東京都目黒区原町２-4-2</td>\n",
+       "      <td>36.45</td>\n",
+       "      <td>1972年6月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>グリーンプラザ綾瀬II</td>\n",
+       "      <td>1400万円</td>\n",
+       "      <td>東京都足立区綾瀬６-7-15</td>\n",
+       "      <td>37.27</td>\n",
+       "      <td>1989年12月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>豊栄アルベルゴ上野</td>\n",
+       "      <td>1480万円</td>\n",
+       "      <td>東京都台東区上野７-３－９</td>\n",
+       "      <td>15.51</td>\n",
+       "      <td>1980年3月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>パークハイツ</td>\n",
+       "      <td>1480万円</td>\n",
+       "      <td>東京都板橋区高島平２</td>\n",
+       "      <td>36.45</td>\n",
+       "      <td>1978年6月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>池袋シティハウス</td>\n",
+       "      <td>1490万円</td>\n",
+       "      <td>東京都板橋区中丸町3-1</td>\n",
+       "      <td>18.62</td>\n",
+       "      <td>1991年8月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>鷺宮プリンスマンション</td>\n",
+       "      <td>1500万円</td>\n",
+       "      <td>東京都中野区鷺宮５-6-21</td>\n",
+       "      <td>40.14</td>\n",
+       "      <td>1977年9月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>新菊川ビル</td>\n",
+       "      <td>1540万円</td>\n",
+       "      <td>東京都墨田区菊川１-17-17</td>\n",
+       "      <td>37.37</td>\n",
+       "      <td>1970年4月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>久我山ロータリーマンション</td>\n",
+       "      <td>1580万円</td>\n",
+       "      <td>東京都杉並区久我山１-5-2</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>1976年4月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>イトーピア豊玉マンション</td>\n",
+       "      <td>1580万円</td>\n",
+       "      <td>東京都練馬区豊玉上２-1-6</td>\n",
+       "      <td>29.48</td>\n",
+       "      <td>1976年5月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ハイネス阿佐谷</td>\n",
+       "      <td>1590万円</td>\n",
+       "      <td>東京都杉並区成田東１-49-7</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>1972年3月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>ダイヤモンドスクエア駒形</td>\n",
+       "      <td>1650万円</td>\n",
+       "      <td>東京都台東区駒形１</td>\n",
+       "      <td>20.83</td>\n",
+       "      <td>1992年1月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>セザール第二竹ノ塚</td>\n",
+       "      <td>1690万円</td>\n",
+       "      <td>東京都足立区西保木間２</td>\n",
+       "      <td>50.34</td>\n",
+       "      <td>1995年1月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>セザール第二竹ノ塚</td>\n",
+       "      <td>1690万円</td>\n",
+       "      <td>東京都足立区西保木間２</td>\n",
+       "      <td>50.34</td>\n",
+       "      <td>1995年1月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>ワコー徳丸マンション</td>\n",
+       "      <td>1880万円</td>\n",
+       "      <td>東京都板橋区徳丸３</td>\n",
+       "      <td>51.74</td>\n",
+       "      <td>1976年5月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>給田西住宅</td>\n",
+       "      <td>1890万円</td>\n",
+       "      <td>東京都世田谷区給田４-２８－１</td>\n",
+       "      <td>59.83</td>\n",
+       "      <td>1973年4月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>ライオンズマンション青戸</td>\n",
+       "      <td>1980万円</td>\n",
+       "      <td>東京都葛飾区立石８-５３－６</td>\n",
+       "      <td>43.74</td>\n",
+       "      <td>1980年7月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>グリーンパーク花畑Iパサージュ</td>\n",
+       "      <td>1980万円</td>\n",
+       "      <td>東京都足立区花畑３</td>\n",
+       "      <td>61.56</td>\n",
+       "      <td>1987年3月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>アイディ上野Ⅲ</td>\n",
+       "      <td>1980万円</td>\n",
+       "      <td>東京都台東区入谷２</td>\n",
+       "      <td>19.43</td>\n",
+       "      <td>2010年3月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>ビレッタ池之端</td>\n",
+       "      <td>1980万円</td>\n",
+       "      <td>東京都台東区池之端２-６－１１</td>\n",
+       "      <td>43.33</td>\n",
+       "      <td>1976年3月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>スカイタウン中野</td>\n",
+       "      <td>1980万円</td>\n",
+       "      <td>東京都中野区丸山１</td>\n",
+       "      <td>33.89</td>\n",
+       "      <td>1974年8月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>シャンボール上北沢</td>\n",
+       "      <td>1990万円</td>\n",
+       "      <td>東京都世田谷区上北沢４</td>\n",
+       "      <td>39.4</td>\n",
+       "      <td>1970年10月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>力建杉並ハイム</td>\n",
+       "      <td>1990万円</td>\n",
+       "      <td>東京都杉並区下高井戸２-4-13</td>\n",
+       "      <td>39.76</td>\n",
+       "      <td>1967年10月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>カーサ常盤台</td>\n",
+       "      <td>2080万円</td>\n",
+       "      <td>東京都板橋区前野町５</td>\n",
+       "      <td>55</td>\n",
+       "      <td>1970年8月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>ボナハイツ中川C棟</td>\n",
+       "      <td>2090万円</td>\n",
+       "      <td>東京都足立区大谷田２</td>\n",
+       "      <td>65.88</td>\n",
+       "      <td>1977年9月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>グリーンコーポお花茶屋</td>\n",
+       "      <td>2090万円</td>\n",
+       "      <td>東京都葛飾区宝町２</td>\n",
+       "      <td>46.48</td>\n",
+       "      <td>1983年9月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>ワコーレ赤塚公園</td>\n",
+       "      <td>2150万円</td>\n",
+       "      <td>東京都板橋区徳丸８</td>\n",
+       "      <td>57.1</td>\n",
+       "      <td>1985年9月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>久我山ロータリーマンション119号室</td>\n",
+       "      <td>2180万円</td>\n",
+       "      <td>東京都杉並区久我山１</td>\n",
+       "      <td>28.86</td>\n",
+       "      <td>1976年4月</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>雪ヶ谷第2コーポラス</td>\n",
+       "      <td>2190万円</td>\n",
+       "      <td>東京都大田区南雪谷１</td>\n",
+       "      <td>45.36</td>\n",
+       "      <td>1971年3月</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  name     price           address   area       age\n",
+       "0                 ロクタス  1億4700万円         東京都目黒区駒場１  92.36  2009年12月\n",
+       "1                コーポ東山    1100万円         東京都板橋区東山町  32.93   1975年4月\n",
+       "2               洗足シュロス    1400万円     東京都目黒区原町２-4-2  36.45   1972年6月\n",
+       "3          グリーンプラザ綾瀬II    1400万円    東京都足立区綾瀬６-7-15  37.27  1989年12月\n",
+       "4            豊栄アルベルゴ上野    1480万円     東京都台東区上野７-３－９  15.51   1980年3月\n",
+       "5               パークハイツ    1480万円        東京都板橋区高島平２  36.45   1978年6月\n",
+       "6             池袋シティハウス    1490万円      東京都板橋区中丸町3-1  18.62   1991年8月\n",
+       "7          鷺宮プリンスマンション    1500万円    東京都中野区鷺宮５-6-21  40.14   1977年9月\n",
+       "8                新菊川ビル    1540万円   東京都墨田区菊川１-17-17  37.37   1970年4月\n",
+       "9        久我山ロータリーマンション    1580万円    東京都杉並区久我山１-5-2   26.6   1976年4月\n",
+       "10        イトーピア豊玉マンション    1580万円    東京都練馬区豊玉上２-1-6  29.48   1976年5月\n",
+       "11             ハイネス阿佐谷    1590万円   東京都杉並区成田東１-49-7  29.88   1972年3月\n",
+       "12        ダイヤモンドスクエア駒形    1650万円         東京都台東区駒形１  20.83   1992年1月\n",
+       "13           セザール第二竹ノ塚    1690万円       東京都足立区西保木間２  50.34   1995年1月\n",
+       "14           セザール第二竹ノ塚    1690万円       東京都足立区西保木間２  50.34   1995年1月\n",
+       "15          ワコー徳丸マンション    1880万円         東京都板橋区徳丸３  51.74   1976年5月\n",
+       "16               給田西住宅    1890万円   東京都世田谷区給田４-２８－１  59.83   1973年4月\n",
+       "17        ライオンズマンション青戸    1980万円    東京都葛飾区立石８-５３－６  43.74   1980年7月\n",
+       "18     グリーンパーク花畑Iパサージュ    1980万円         東京都足立区花畑３  61.56   1987年3月\n",
+       "19             アイディ上野Ⅲ    1980万円         東京都台東区入谷２  19.43   2010年3月\n",
+       "20             ビレッタ池之端    1980万円   東京都台東区池之端２-６－１１  43.33   1976年3月\n",
+       "21            スカイタウン中野    1980万円         東京都中野区丸山１  33.89   1974年8月\n",
+       "22           シャンボール上北沢    1990万円       東京都世田谷区上北沢４   39.4  1970年10月\n",
+       "23             力建杉並ハイム    1990万円  東京都杉並区下高井戸２-4-13  39.76  1967年10月\n",
+       "24              カーサ常盤台    2080万円        東京都板橋区前野町５     55   1970年8月\n",
+       "25           ボナハイツ中川C棟    2090万円        東京都足立区大谷田２  65.88   1977年9月\n",
+       "26         グリーンコーポお花茶屋    2090万円         東京都葛飾区宝町２  46.48   1983年9月\n",
+       "27            ワコーレ赤塚公園    2150万円         東京都板橋区徳丸８   57.1   1985年9月\n",
+       "28  久我山ロータリーマンション119号室    2180万円        東京都杉並区久我山１  28.86   1976年4月\n",
+       "29          雪ヶ谷第2コーポラス    2190万円        東京都大田区南雪谷１  45.36   1971年3月"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,7 +482,9 @@
     "          \"price\":[],\n",
     "          \"address\":[],\n",
     "          \"area\":[],\n",
-    "          \"age\":[]}\n",
+    "          \"age_year\":[],\n",
+    "          \"age_month\":[],\n",
+    "          }\n",
     "\n",
     "    for page in range(1,2):\n",
     "        soup = load_page(url.format(page))\n",
@@ -139,17 +499,16 @@
     "            info[\"name\"].append(extract_name(name_text))\n",
     "            price_text=estate[1].find_all(\"dd\")[0].text\n",
     "            info[\"price\"].append(extract_price(price_text))\n",
-    "            info[\"address\"]=estate[2].find_all(\"dd\")[0].text\n",
+    "            info[\"address\"].append(estate[2].find_all(\"dd\")[0].text)\n",
     "            area_text=estate[3].find_all(\"dd\")[0].text\n",
-    "            info[\"area\"]=extract_area(area_text)\n",
-    "            info[\"age\"]=estate[4].find_all(\"dd\")[1].text\n",
+    "            info[\"area\"].append(extract_area(area_text))\n",
+    "            built_date=estate[4].find_all(\"dd\")[0].text\n",
+    "            age_years,age_months=calculate_age(built_date)\n",
+    "\n",
     "            \n",
     "\n",
     "\n",
-    "        print(info)\n",
-    "\n",
-    "\n",
-    "    return \n",
+    "    return pd.DataFrame(info)\n",
     "\n",
     "get_apidata_suumo()"
    ]
